--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,7 @@ inputs:
   update_times_a_day:
     description: 'Number of times a day the docker should be pull from the docker registry. Whole number between 1 and 24'
     required: false
+    default: "false"
 runs:
   using: "composite"
   steps:
