--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,7 @@ runs:
         mkdir gitstream
         cd gitstream
         mkdir repo
+
     - name: Checkout base branch
       uses: actions/checkout@v4
       with:
@@ -44,6 +45,7 @@ runs:
         ref: ${{ github.event.inputs.base_ref }}
         path: "gitstream/repo/"
         token: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).githubToken || github.token }}
+
     - name: Escape single quotes
       id: safe-strings
       uses: actions/github-script@v7
@@ -99,13 +101,32 @@ runs:
     - name: Run The Action
       id: gitstream-action
       if: always()
-      run: |
+      run: >-
         env_file=env.user
+
         touch $env_file
+
         for var in $(env | cut -d "=" -f 1); do
           value="${!var}"
           echo "$var=$value" >> "$env_file"
         done
+
         docker pull gitstream/rules-engine:latest
-        docker run --env-file $env_file -v $(pwd)/gitstream:/code -e HEAD_REF=$'upstream/${{ steps.safe-strings.outputs.head_ref }}' -e BASE_REF=$'${{ steps.safe-strings.outputs.base_ref }}' -e CLIENT_PAYLOAD=${{ steps.safe-strings.outputs.client_payload }} -e RULES_RESOLVER_URL=${{ github.event.inputs.resolver_url }} -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }} -e DEBUG_MODE=${{ github.event.inputs.debug_mode }} -u $(id -u):$(id -g) gitstream/rules-engine
+
+        docker run 
+        --env-file $env_file 
+        -v $(pwd)/gitstream:/code 
+        -e HEAD_REF=$'upstream/${{ steps.safe-strings.outputs.head_ref }}' 
+        -e BASE_REF=$'${{ steps.safe-strings.outputs.base_ref }}' 
+        -e CLIENT_PAYLOAD=${{ steps.safe-strings.outputs.client_payload }} 
+        -e RULES_RESOLVER_URL=${{ github.event.inputs.resolver_url }} 
+        -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }} 
+        -e DEBUG_MODE=${{ github.event.inputs.debug_mode }} 
+        gitstream/rules-engine
       shell: bash
+
+    - name: Cleanup
+      if: ${{ always() }}
+      shell: bash
+      run: |
+        rm -rf gitstream
