--- a/action.yml
+++ b/action.yml
@@ -26,10 +26,7 @@ inputs:
     description: "Run parser in debug mode"
     required: false
     default: false
-  update_times_a_day:
-    description: 'Number of times a day the docker should be pull from the docker registry. Whole number between 1 and 24'
-    required: false
-    default: "false"
+
 runs:
   using: "composite"
   steps:
@@ -107,37 +104,6 @@ runs:
         ref: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepoRef }}
         path: "gitstream/cm/"
 
-    - name: Get Docker cache key
-      id: cache-key
-      if: ${{ inputs.update_times_a_day }}
-      uses: actions/github-script@v7
-      env:
-        UPDATE_TIMES_A_DAY: ${{ inputs.update_times_a_day }}
-      with:
-        script: |
-          require('${{ github.action_path }}/script.js')(core);
-
-    - name: Cache Docker
-      id: cache-gitstream-docker
-      if: ${{ env.DOCKER_KEY }}
-      uses: actions/cache@v4
-      with:
-        path: /tmp/**.tar
-        key: ${{ env.DOCKER_KEY }}
-
-    - name: Docker Pull
-      if: steps.cache-gitstream-docker.outputs.cache-hit != 'true'
-      shell: bash
-      run: |
-        docker pull gitstream/rules-engine:latest
-        docker save -o /tmp/${{ env.DOCKER_KEY }}.tar gitstream/rules-engine:latest
-
-    - name: Docker Load
-      if: steps.cache-gitstream-docker.outputs.cache-hit == 'true'
-      shell: bash
-      run: docker load -i /tmp/${{ env.DOCKER_KEY }}.tar
-
-
     - name: Run The Action
       id: gitstream-action
       shell: bash
@@ -166,7 +132,7 @@ runs:
         gitstream/rules-engine
 
     - name: Cleanup
-      if: ${{ always() }}
+      if: always()
       shell: bash
       run: >-
         echo "Cleaning up"
