--- a/action.yml
+++ b/action.yml
@@ -75,6 +75,7 @@ runs:
             core.error(`Failed producing safe string: ${err}`);
             process.exit(1);
           }
+
     - name: Checkout Pull Request branches history
       run: |
         all=2147483647
@@ -85,12 +86,14 @@ runs:
         git fetch --deepen=$all upstream $'${{ steps.safe-strings.outputs.head_ref }}'
         git checkout -b $'upstream/${{ steps.safe-strings.outputs.head_ref}}' $'upstream/${{ steps.safe-strings.outputs.head_ref}}'
       shell: bash
+
     - name: Create cm folder
       id: create-cm-folder
       shell: bash
       run: |
         cd gitstream
         mkdir cm
+
     - name: Checkout cm repo
       uses: actions/checkout@v4
       if: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).hasCmRepo == true }}
@@ -98,9 +101,10 @@ runs:
         repository: "${{ fromJSON(fromJSON(github.event.inputs.client_payload)).owner }}/${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepo }}"
         ref: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepoRef }}
         path: "gitstream/cm/"
+
     - name: Run The Action
       id: gitstream-action
-      if: always()
+      shell: bash
       run: >-
         env_file=env.user
 
@@ -113,20 +117,23 @@ runs:
 
         docker pull gitstream/rules-engine:latest
 
-        docker run 
-        --env-file $env_file 
-        -v $(pwd)/gitstream:/code 
-        -e HEAD_REF=$'upstream/${{ steps.safe-strings.outputs.head_ref }}' 
-        -e BASE_REF=$'${{ steps.safe-strings.outputs.base_ref }}' 
-        -e CLIENT_PAYLOAD=${{ steps.safe-strings.outputs.client_payload }} 
-        -e RULES_RESOLVER_URL=${{ github.event.inputs.resolver_url }} 
-        -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }} 
-        -e DEBUG_MODE=${{ github.event.inputs.debug_mode }} 
+        docker run
+        --env-file $env_file
+        -v $(pwd)/gitstream:/code
+        -e HEAD_REF=$'upstream/${{ steps.safe-strings.outputs.head_ref }}'
+        -e BASE_REF=$'${{ steps.safe-strings.outputs.base_ref }}'
+        -e CLIENT_PAYLOAD=${{ steps.safe-strings.outputs.client_payload }}
+        -e RULES_RESOLVER_URL=${{ github.event.inputs.resolver_url }}
+        -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }}
+        -e DEBUG_MODE=${{ github.event.inputs.debug_mode }}
         gitstream/rules-engine
-      shell: bash
 
     - name: Cleanup
-      if: ${{ always() }}
+      if: always()
       shell: bash
-      run: |
-        rm -rf gitstream
+      run: >-
+        docker run
+        --env-file $env_file
+        -v $(pwd)/gitstream:/code
+        --entrypoint ash
+        gitstream/rules-engine -c "rm -rf /code/* && chown 1000:1000 /code"
