--- a/action.yml
+++ b/action.yml
@@ -158,7 +158,13 @@ runs:
         -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }}
         -e DEBUG_MODE=${{ github.event.inputs.debug_mode }} gitstream/rules-engine:latest
 
+    - name: Cleanup
+      if: ${{ always() }}
+      shell: bash
+      run: >-
+        echo "Cleaning up"
+
         docker run
         -v $(pwd)/gitstream:/code
         --entrypoint ash
-        gitstream/rules-engine -c "rm -rf /code/* && chown 1000:1000 /code"
+        gitstream/rules-engine -c "rm -rf /code/*"
