--- a/action.yml
+++ b/action.yml
@@ -26,11 +26,10 @@ inputs:
     description: "Run parser in debug mode"
     required: false
     default: "false"
-  update_times_a_day:
-    description: 'Number of times a day the docker should be pull from the docker registry. Whole number between 1 and 24'
+  pull_docker_from_cache:
+    description: "If should store gitstream docker in GitHub cache"
     required: false
-    default: "1"
-
+    default: "false"
 runs:
   using: "composite"
   steps:
@@ -104,6 +103,17 @@ runs:
         repository: "${{ fromJSON(fromJSON(github.event.inputs.client_payload)).owner }}/${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepo }}"
         ref: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepoRef }}
         path: "gitstream/cm/"
+
+    - name: Docker Layer Caching
+      if: ${{ inputs.pull_docker_from_cache == 'true' }}
+      uses: satackey/action-docker-layer-caching@v0.0.11
+      continue-on-error: true
+      with:
+        concurrency: 12
+
+    - name: Pull gitstream Docker
+      shell: bash
+      run: docker pull gitstream/rules-engine:latest
 
     - name: Run The Action
       if: always()
