--- a/action.yml
+++ b/action.yml
@@ -25,11 +25,7 @@ inputs:
   debug_mode:
     description: "Run parser in debug mode"
     required: false
-    default: "false"
-  pull_docker_from_cache:
-    description: "If should store gitstream docker in GitHub cache"
-    required: false
-    default: "false"
+    default: false
 runs:
   using: "composite"
   steps:
@@ -103,17 +99,6 @@ runs:
         repository: "${{ fromJSON(fromJSON(github.event.inputs.client_payload)).owner }}/${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepo }}"
         ref: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepoRef }}
         path: "gitstream/cm/"
-
-    - name: Docker Layer Caching
-      if: ${{ inputs.pull_docker_from_cache == 'true' }}
-      uses: satackey/action-docker-layer-caching@v0.0.11
-      continue-on-error: true
-      with:
-        concurrency: 12
-
-    - name: Pull gitstream Docker
-      shell: bash
-      run: docker pull gitstream/rules-engine:latest
 
     - name: Run The Action
       if: always()
