--- a/action.yml
+++ b/action.yml
@@ -26,11 +26,15 @@ inputs:
     description: "Run parser in debug mode"
     required: false
     default: "false"
+  update_times_a_day:
+    description: 'Number of times a day the docker should be pull from the docker registry. Whole number between 1 and 24'
+    required: false
+    default: "1"
+
 runs:
   using: "composite"
   steps:
     - name: Create GitStream folder
-      id: create-gitstream-folder
       shell: bash
       run: |
         rm -rf gitstream
@@ -88,7 +92,6 @@ runs:
       shell: bash
 
     - name: Create cm folder
-      id: create-cm-folder
       shell: bash
       run: |
         cd gitstream
@@ -102,8 +105,38 @@ runs:
         ref: ${{ fromJSON(fromJSON(github.event.inputs.client_payload)).cmRepoRef }}
         path: "gitstream/cm/"
 
+    - name: Get Docker cache key
+      id: cache-key
+      if: ${{ inputs.update_times_a_day }}
+      uses: actions/github-script@v7
+      env:
+        UPDATE_TIMES_A_DAY: ${{ inputs.update_times_a_day }}
+      with:
+        script: |
+          require('${{ github.action_path }}/script.js')(core);
+
+    - name: Cache Docker
+      id: cache-gitstream-docker
+      if: ${{ env.DOCKER_KEY }}
+      uses: actions/cache@v4
+      with:
+        path: /tmp/**.tar
+        key: ${{ env.DOCKER_KEY }}
+
+    - name: Docker Pull
+      if: steps.cache-gitstream-docker.outputs.cache-hit != 'true'
+      shell: bash
+      run: |
+        docker pull gitstream/rules-engine:latest
+        docker save -o /tmp/${{ env.DOCKER_KEY }}.tar gitstream/rules-engine:latest
+
+    - name: Docker Load
+      if: steps.cache-gitstream-docker.outputs.cache-hit == 'true'
+      shell: bash
+      run: docker load -i /tmp/${{ env.DOCKER_KEY }}.tar
+
     - name: Run The Action
-      id: gitstream-action
+      if: always()
       shell: bash
       run: >-
         env_file=env.user
@@ -115,8 +148,6 @@ runs:
           echo "$var=$value" >> "$env_file"
         done
 
-        docker pull gitstream/rules-engine:latest
-
         docker run
         --env-file $env_file
         -v $(pwd)/gitstream:/code
@@ -125,8 +156,7 @@ runs:
         -e CLIENT_PAYLOAD=${{ steps.safe-strings.outputs.client_payload }}
         -e RULES_RESOLVER_URL=${{ github.event.inputs.resolver_url }}
         -e RULES_RESOLVER_TOKEN=${{ github.event.inputs.resolver_token }}
-        -e DEBUG_MODE=${{ github.event.inputs.debug_mode }}
-        gitstream/rules-engine
+        -e DEBUG_MODE=${{ github.event.inputs.debug_mode }} gitstream/rules-engine:latest
 
     - name: Cleanup
       if: ${{ always() }}
